[package]
name = "fusible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "slice-file"
path = "slice-file/main.rs"

[[bin]]
name = "split-file-into-chunks"
path = "split-file-into-chunks/main.rs"


[dependencies]
env_logger = "0.10.0"
fuse = "0.3.1"
libc = "0.2.139"
log = "0.4.17"
rand = "0.8.5"
time = "0.1.45"
trace = "*"
lazy_static = "1.4.0"
